# faster-than-walk

./: .gitignore  Dockerfile  PKG-INFO  README.md  benchmark.py  build-docker.sh  build.nims  build.sh  example.py  faster_than_walk.nim.cfg  faster_than_walk.nimble  install2local4testing.sh  package.sh  package4pypi.sh  run-docker.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish.yml  pypi_upload.yml
docs/: faster_than_walk.tex  index.html
examples/: example.py
faster_than_walk/: __init__.py  faster_than_walk.nim.cfg
src/: faster_than_walk.nim  faster_than_walk.nim.cfg
