# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = faster_than_walk
provides         = faster_than_walk
description      = Faster recursive directory walk for Python.
url              = https://github.com/juancarlospaco/faster-than-walk#faster-than-walk
download_url     = https://github.com/juancarlospaco/faster-than-walk/releases
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
maintainer       = Juan Carlos
maintainer_email = juancarlospaco@gmail.com
keywords         = python3, cpython, speed, walk, cython, performance, c
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 0.9.5
project_urls     =
    Docs = https://github.com/juancarlospaco/faster-than-walk#faster-than-walk
    Bugs = https://github.com/juancarlospaco/faster-than-walk/issues
    CoC  = https://github.com/juancarlospaco/faster-than-walk/blob/master/CODE_OF_CONDUCT.md

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development


[options]
include_package_data = True
python_requires  = >3.7
tests_require    = nimporter
install_requires = nimporter
setup_requires   = nimporter
packages         = find:

[options.package_data]
* = *.nim, *.nims, *.nimf, *.cfg

[options.packages.find]
where   = .
include = *.nim, *.nims, *.nimf, *.cfg
exclude = *.py, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests
